all crud finished