@@ -1,25 +1,17 @@
 package com.iris.irisback.service;
 
 import com.iris.irisback.dto.CommandeDTO;
-import com.iris.irisback.dto.MachineDTO;
 import com.iris.irisback.exception.NotFoundException;
 import com.iris.irisback.mapper.CommandeMapper;
-import com.iris.irisback.mapper.MachineMapper;
 import com.iris.irisback.model.Article;
 import com.iris.irisback.model.Commande;
-import com.iris.irisback.model.Machine;
 import com.iris.irisback.repository.ArticleRepository;
 import com.iris.irisback.repository.ClientRepository;
 import com.iris.irisback.repository.CommandeRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -27,33 +19,39 @@ import static java.util.stream.Collectors.toList;
 
 @Service
 public class CommandeService {
-    @Autowired
-    CommandeRepository commandeRepository;
-    @Autowired
-    ClientRepository clientRepository;
+  private final CommandeRepository commandeRepository;
+  private final ClientRepository clientRepository;
+  private final ArticleRepository articleRepository;
 
-    @Autowired
-    ArticleRepository articleRepository;
+  public CommandeService(
+      final CommandeRepository commandeRepository,
+      final ClientRepository clientRepository,
+      final ArticleRepository articleRepository) {
+    this.commandeRepository = commandeRepository;
+    this.clientRepository = clientRepository;
+    this.articleRepository = articleRepository;
+  }
 
-    public CommandeDTO addCommande(CommandeDTO commandeDTO) throws IOException {
-        final Commande commande1 = CommandeMapper.MAPPER.toCommande(commandeDTO);
-        return CommandeMapper.MAPPER.toCommandeDTO(commandeRepository.save(commande1));
+  public CommandeDTO addCommande(final CommandeDTO commandeDTO) throws IOException {
+    final Commande commande1 = CommandeMapper.MAPPER.toCommande(commandeDTO);
+    final List<Article> articles = new ArrayList<>();
+    commandeDTO.getArticlesId().forEach(id -> articles.add(articleRepository.findArticleById(id)));
+    commande1.setArticles(articles);
+    return CommandeMapper.MAPPER.toCommandeDTO(commandeRepository.save(commande1));
+  }
 
-    }
+  public List<CommandeDTO> myCommandes(final String clientId) throws IOException {
+    final List<Commande> commandeByClientId = commandeRepository.findCommandeByClientId(clientId);
+    return commandeByClientId.stream()
+        .map(commande -> CommandeMapper.MAPPER.toCommandeDTO(commande))
+        .collect(Collectors.toList());
+  }
 
+  public void deleteCommande(final String id) throws IOException {
+    commandeRepository.deleteById(id);
+  }
 
-
-    public List<CommandeDTO> myCommandes(final String  clientId) throws IOException {
-        return commandeRepository.findCommandeByClientId(clientId).stream().map(commande -> CommandeMapper.MAPPER.toCommandeDTO(commande)).collect(Collectors.toList());
-    }
-
-    public void deleteCommande(String  id) throws IOException{
-        commandeRepository.deleteById(id);
-    }
-
-
-
-    public CommandeDTO updateCommande(CommandeDTO commandeDTO, String commandeId){
+  public CommandeDTO updateCommande(final CommandeDTO commandeDTO, final String commandeId) {
     return commandeRepository
         .findById(commandeId)
         .map(
@@ -61,28 +59,13 @@ public class CommandeService {
               commande.setTypeCmd(commandeDTO.getTypeCmd());
               commande.setNumCmd(commandeDTO.getNumCmd());
               commande.setDateCmd(commandeDTO.getDateCmd());
-              commande.setArticles(commandeDTO.getArticles());
-                commande.setClient(clientRepository.findClientById(commandeDTO.getClientId()));
-             /* commande.setArticle(
-                  new ArrayList<Article>(
-                      Collections.singleton(
-                          articleRepository.findArticleById(
-                              String.valueOf(commandeDTO.getArticlesId().stream().toList())))));*/
-
-
-
-              //
-              // commande.setArticle(Collections.singletonList(articleRepository.findArticleById(String.valueOf(commandeDTO.getArticlesId()))));
-              //
-              // commande.setArticle(Collections.singletonList(articleRepository.findArticleById(String.valueOf(commandeDTO.getArticlesId()))));
-            return CommandeMapper.MAPPER.toCommandeDTO(commandeRepository.save(commande));
-           })
+              final List<Article> list =
+                  commandeDTO.getArticlesId().stream()
+                      .map((articlesId) -> articleRepository.findArticleById(articlesId))
+                      .collect(toList());
+              commande.setArticles(list);
+              return CommandeMapper.MAPPER.toCommandeDTO(commandeRepository.save(commande));
+            })
         .orElseThrow(() -> new NotFoundException("Commande Id  " + commandeId + " not found"));
-    }
-
-
-
-
-
-
+  }
 }
